--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -51,10 +51,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: master
-    - name: Sleep for 60 seconds
+    - name: Sleep for 5 minutes
       uses: jakejarvis/wait-action@master
       with:
-        time: '120s'
+        time: '300s'
     - name: Cypress tests
       uses: cypress-io/github-action@v1
       env:
