--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -50,7 +50,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: production
-    - name: Sleep for 60 seconds
+    - name: Sleep for 2 minutes
       uses: jakejarvis/wait-action@master
       with:
         time: '120s' # Wait until all servers are restarted
