--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -50,7 +50,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: staging
-    - name: Sleep for 60 seconds
+    - name: Sleep for 2 minutes
       uses: jakejarvis/wait-action@master
       with:
         time: '120s'
