--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -50,10 +50,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: production
-    - name: Sleep for 2 minutes
+    - name: Sleep for 5 minutes
       uses: jakejarvis/wait-action@master
       with:
-        time: '120s' # Wait until all servers are restarted
+        time: '5m' # Wait until all servers are restarted
     - name: Cypress tests
       uses: cypress-io/github-action@v1
       with:
