--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -50,10 +50,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: staging
-    - name: Sleep for 2 minutes
+    - name: Sleep for 5 minutes
       uses: jakejarvis/wait-action@master
       with:
-        time: '120s'
+        time: '5m'
     - name: Cypress tests
       uses: cypress-io/github-action@v1
       env:
