--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
+    "apollo-upload-client": "^13.0.0",
     "copy-text-to-clipboard": "^2.1.1",
     "date-fns": "^2.9.0",
     "forever": "^1.0.0",
