--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-dom": "^16.12.0",
     "react-fetch-hook": "^1.8.0",
     "react-icons": "^3.9.0",
-    "react-leaflet": "^2.6.1",
+    "react-leaflet": "^2.7.0",
     "react-leaflet-draw": "^0.19.0",
     "react-markdown": "^4.3.1",
     "react-primitives-svg": "^0.0.3",
@@ -75,6 +75,7 @@
     "@graphql-codegen/fragment-matcher": "^1.12.2",
     "@graphql-codegen/introspection": "^1.12.2",
     "@graphql-codegen/typescript": "^1.12.2",
+    "@types/react-leaflet": "^2.5.2",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "customize-cra": "^0.9.1",
