--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
     "p-queue": "^6.2.1",
     "polished": "^3.4.4",
     "prop-types": "^15.6.2",
-    "react": "^16.12.0",
+    "react": "16.13.1",
     "react-autosuggest": "^9.4.3",
     "react-datepicker": "2.7.0",
     "react-dev-utils": "^10.1.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.13.1",
     "react-fetch-hook": "^1.8.0",
     "react-icons": "^3.9.0",
     "react-leaflet": "^2.7.0",
     "react-leaflet-draw": "^0.19.0",
     "react-markdown": "^4.3.1",
     "react-primitives-svg": "^0.0.3",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
     "react-timer-hook": "^1.1.10",
     "react-virtualized": "^9.21.2",
