--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -73,7 +73,7 @@ jobs:
         path: cypress/screenshots
     - name: Upload video artifacts
       uses: actions/upload-artifact@v1
-      if: always()
+      if: failure()
       with:
         name: cypress-videos
         path: cypress/videos
