--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -31,6 +31,17 @@ jobs:
           username: ddunderfelt
           password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
           tags: dev
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - name: test
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: hsldevcom/transitlog-ui-${{ steps.date.outputs.date }}
+          username: ddunderfelt
+          password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
+          buildargs: BUILD_ENV=dev
+          tags: dev
       - name: Deploy with Gitlab CI
         run: curl -X POST -F token=${{ secrets.GITLAB_DEV_TRIGGER_TOKEN }} -F ref=master https://gitlab.hsl.fi/api/v4/projects/202/trigger/pipeline
       - name: Notify of deployment
@@ -42,34 +53,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-  deploy-dev-timestamped:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout UI
-        uses: actions/checkout@v2
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-      - name: Build UI and publish Docker image
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: hsldevcom/transitlog-ui-${{ steps.date.outputs.date }}
-          username: ddunderfelt
-          password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-          buildargs: BUILD_ENV=dev
-          tags: dev
-      - name: Checkout server
-        uses: actions/checkout@v2
-        with:
-          repository: HSLdevcom/transitlog-server
-          ref: master
-      - name: Build Server and publish Docker image
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: hsldevcom/transitlog-server-${{ steps.date.outputs.date }}
-          username: ddunderfelt
-          password: ${{ secrets.DDUNDERFELT_DOCKER_ACCESS_TOKEN }}
-          tags: dev
   test-dev:
     needs: deploy-dev
     runs-on: ubuntu-latest
