--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,7 +3,7 @@ name: Deploy and test dev
 on:
   pull_request:
     branches:
-      - master
+      - dev
 
 jobs:
   deploy-dev:
@@ -64,6 +64,9 @@ jobs:
     needs: deploy-dev
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
       - uses: actions/checkout@v2
         with:
           ref: master
@@ -73,6 +76,8 @@ jobs:
           time: "5m"
       - name: Cypress tests
         uses: cypress-io/github-action@v2
+        with:
+          node-version: "14"
         env:
           CYPRESS_BASE_URL: https://dev.reittiloki.hsl.fi
           CYPRESS_CLIENT_ID: ${{ secrets.CYPRESS_CLIENT_ID }}
