--- a/.env.stage
+++ b/.env.stage
@@ -5,8 +5,8 @@ REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://stage.reittiloki.hsl.fi/server/graph
 REACT_APP_TRANSITLOG=https://stage.reittiloki.hsl.fi
 
 # Auth
-REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
-REACT_APP_CLIENT_ID=7510123698297597
+REACT_APP_AUTH_URI=https://id.hsl.fi/openid/auth
+REACT_APP_CLIENT_ID=0220583783240827
 # Change this in your .env.local to http://localhost:3000
 REACT_APP_REDIRECT_URI=https://stage.reittiloki.hsl.fi
 REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
@@ -25,3 +25,5 @@ REACT_APP_TIMEZONE=Europe/Helsinki
 
 # API key for weather data
 REACT_APP_FMI_APIKEY=4a22a195-10be-404f-8056-e8aaf5f7506a
+
+REACT_APP_MAPILLARY_CLIENT_TOKEN=
