--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -47,6 +47,9 @@ jobs:
     needs: deploy-stage
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
       - uses: actions/checkout@v2
         with:
           ref: staging
