--- a/.github/workflows/test_production.yml
+++ b/.github/workflows/test_production.yml
@@ -8,6 +8,9 @@ jobs:
   test-production:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
       - uses: actions/checkout@v2
         with:
           ref: production
